--- a/pag-historia-douglas.html
+++ b/pag-historia-douglas.html
@@ -38,7 +38,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1>Emagrecer 50kg em 6 meses? Você duvida? Ele conseguiu!</h1>
+							<h1>Emagrecer 50kg em 6 meses e meio? Você duvida? Ele conseguiu!</h1>
 						</header>
                         <h2 class="sub-titulo">“Cheguei a pesar até 125Kg...”</h2>
 						<p class="texto-corpo"><strong>Bem-vindo ao blog Eu Emagreci</strong>.Fico extremamente feliz por você estar aqui, pois essa é a nossa primeira publicação e já posso adiantar que aqui você irá se comover, aprender e encontrar motivação. Você verá histórias de várias pessoas que um dia foram acima do peso, infelizes com seus corpos, com a auto estima lá em baixo, conseguiram dar a volta por cima, ergueram a cabeça, se encheram de coragem e determinação e disseram a si mesmos “Eu Consigo”, e assim decidiram mudar suas vidas.
