--- a/pag-historia-douglas.html
+++ b/pag-historia-douglas.html
@@ -69,8 +69,7 @@ Gostou da História do Douglas? Compartilhe agora em suas redes sociais para que
 						<li><a href="https://www.instagram.com/euemagreciblog/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>                        
                     </ul>
             <!-- Botão Compartilhar Facebook -->
-                    <div class="fb-share-button" data-href="https://euemagreciblog.github.io/EuEmagreci/pag-historia-douglas.html" data-layout="button_count" data-size="large" data-mobile-iframe="true">
-                        <li><a class="icon fa-share-square-7x" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Feuemagreciblog.github.io%2Fblog%2F&amp;src=sdkpreparse">Compartilhar</a></li>
+                    <div class="fb-share-button" data-href="https://euemagreciblog.github.io/EuEmagreci/pag-historia-douglas.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Feuemagreciblog.github.io%2FEuEmagreci%2Fpag-historia-douglas.html&amp;src=sdkpreparse">Compartilhar</a></li>
                     </div>
                 </div>                
 			</footer>
