--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eu emagreci</title>
+		<title>Eu Emagreci Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,7 +33,7 @@
 						<header class="major">
 							<h2>Emagrecer 50kg em 6 meses? Você duvida? Ele conseguiu!</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Bem-vindo ao blog Eu Emagreci.Fico extremamente feliz por você estar aqui, pois essa é a nossa primeira publicação e já posso adiantar que aqui você irá se comover, aprender e encontrar motivação. Você verá histórias de várias pessoas que um dia foram acima do peso, infelizes com seus corpos, com a auto estima lá em baixo, conseguiram dar a volta por cima, ergueram a cabeça, se encheram de coragem e determinação e disseram a si mesmos “Eu Consigo”...</p>
 						<ul class="actions">
 							<li><a href="pag-historia-douglas.html" class="button">Leia Mais</a></li>
 						</ul>
