--- a/pag-historia-douglas.html
+++ b/pag-historia-douglas.html
@@ -25,7 +25,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.php" class="image avatar"><img src="images/emagreci-a.jpg" alt="emagreci" /></a>
+					<a href="https://euemagreciblog.github.io/EuEmagreci/index.html" class="image avatar"><img src="images/emagreci-a.jpg" alt="emagreci" /></a>
 					<h1><strong>Ola! Bem Vindo ao Blog Eu Emagreci.</strong><br/> Histórias<br />
 					de quem emagreceu,<br/> para quem quer emagrecer!<br />
 					</h1>
