--- a/pag-historia-douglas.html
+++ b/pag-historia-douglas.html
@@ -58,7 +58,7 @@ Faça como o Douglas, motive-se e faça acontecer!<br/><br/>
 Gostou da História do Douglas? Compartilhe agora em suas redes sociais para que mais pessoas também possam se motivar e emagrecer!</p>
 
 					</section>
-				<img src="/images/douglas-ft.png" alt="Douglas" height="100" width="100">
+				<img src="/images/douglas-ft.jpg" alt="Douglas" height="100" width="100">
 			</div>
 		<!-- Footer -->
 			<footer id="footer">
