--- a/pag-historia-douglas.html
+++ b/pag-historia-douglas.html
@@ -57,9 +57,9 @@ Essa é a verdadeira prova, determinação e foco é o segredo!<br/><br/>
 Faça como o Douglas, motive-se e faça acontecer!<br/><br/>
 Gostou da História do Douglas? Compartilhe agora em suas redes sociais para que mais pessoas também possam se motivar e emagrecer!</p>
 
-					</section>
-				<img src="/images/douglas-ft.jpg" alt="Douglas" height="100" width="100">
+					</section>				
 			</div>
+		<img src="/images/douglas-ft.jpg" alt="Douglas-Emagrecer" height="100" width="100">
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
